--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
-    <script src="index.js"></script>
+    <img id="startingImg" />
+    <button id="start">Click Me</button>
+
+    <div id="player1"></div>
+    <div id="player2"></div>
+
+    <script src="test.js"></script>
 </body>
 </html>
